ticketmaster-feeder Tests