@@ -1,65 +1,60 @@
 package ulpgc.ticketmasterfeeder.model;
 
 import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
-
+import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
-class EventTest {
+public class EventTest {
 
     @Test
-    void testEventCreation() {
-        Artist artist1 = new Artist("Artista A");
-        Artist artist2 = new Artist("Artista B");
-        Event event = new Event("Concierto de Música", "2025-08-15", "21:00", "Auditorio Nacional", "Madrid", "España",
-                Arrays.asList(artist1, artist2), "20 - 40 EUR");
+    void testEventConstructorAndGetters() {
+        Artist artist1 = new Artist("Artist A");
+        Artist artist2 = new Artist("Artist B");
+        Event event = new Event(
+                "Concert",
+                "2025-06-01",
+                "20:00",
+                "Gran Arena",
+                "Madrid",
+                "España",
+                List.of(artist1, artist2),
+                "30 - 50 EUR"
+        );
 
-        assertEquals("Concierto de Música", event.getName());
-        assertEquals("2025-08-15", event.getDate());
-        assertEquals("21:00", event.getTime());
-        assertEquals("Auditorio Nacional", event.getVenue());
+        assertEquals("Concert", event.getName());
+        assertEquals("2025-06-01", event.getDate());
+        assertEquals("20:00", event.getTime());
+        assertEquals("Gran Arena", event.getVenue());
         assertEquals("Madrid", event.getCity());
         assertEquals("España", event.getCountry());
         assertEquals(2, event.getArtists().size());
-        assertEquals("Artista A", event.getArtists().get(0).getName());
-        assertEquals("Artista B", event.getArtists().get(1).getName());
-        assertEquals("20 - 40 EUR", event.getPriceInfo());
+        assertEquals("Artist A", event.getArtists().getFirst().getName());
+        assertEquals("30 - 50 EUR", event.getPriceInfo());
     }
 
     @Test
-    void testEventToString() {
-        Artist artist1 = new Artist("Artista A");
-        Artist artist2 = new Artist("Artista B");
-        Event event = new Event("Concierto de Música", "2025-08-15", "21:00", "Auditorio Nacional", "Madrid", "España",
-                Arrays.asList(artist1, artist2), "20 - 40 EUR");
+    void testToStringIncludesAllDetails() {
+        Artist artist = new Artist("Juanes");
+        Event event = new Event(
+                "Fiesta Latina",
+                "2025-08-10",
+                "21:00",
+                "Auditorio Sur",
+                "Sevilla",
+                "España",
+                List.of(artist),
+                "25 EUR"
+        );
 
-        String expected = "Evento: Concierto de Música\n" +
-                "Fecha: 2025-08-15\n" +
-                "Hora: 21:00\n" +
-                "Lugar: Auditorio Nacional\n" +
-                "Ciudad: Madrid\n" +
-                "País: España\n" +
-                "Artistas: Artista A, Artista B\n" +
-                "Precios: 20 - 40 EUR";
+        String toString = event.toString();
 
-        assertEquals(expected, event.toString());
-    }
-
-    @Test
-    void testEventToStringWithNoArtists() {
-        Event event = new Event("Concierto de Música", "2025-08-15", "21:00", "Auditorio Nacional", "Madrid", "España",
-                Arrays.asList(), "20 - 40 EUR");
-
-        String expected = "Evento: Concierto de Música\n" +
-                "Fecha: 2025-08-15\n" +
-                "Hora: 21:00\n" +
-                "Lugar: Auditorio Nacional\n" +
-                "Ciudad: Madrid\n" +
-                "País: España\n" +
-                "Artistas: No disponible\n" +
-                "Precios: 20 - 40 EUR";
-
-        assertEquals(expected, event.toString());
+        assertTrue(toString.contains("Evento: Fiesta Latina"));
+        assertTrue(toString.contains("Fecha: 2025-08-10"));
+        assertTrue(toString.contains("Hora: 21:00"));
+        assertTrue(toString.contains("Lugar: Auditorio Sur"));
+        assertTrue(toString.contains("Ciudad: Sevilla"));
+        assertTrue(toString.contains("País: España"));
+        assertTrue(toString.contains("Artistas: Juanes"));
+        assertTrue(toString.contains("Precios: 25 EUR"));
     }
 }
